# cq-flake

./: flake.nix
expressions/: build123d.nix  cq-studio.nix  py-overrides.nix
expressions/lib3mf/: 0001-Add-missing-algorithm-include.patch  default.nix
expressions/py-lib3mf/: MANIFEST.in  default.nix  pyproject.toml
expressions/yacv/: frontend.nix  server.nix
