[build-system]
requires = [
    "setuptools>=45",
]

build-backend = "setuptools.build_meta"

[project]
name = "lib3mf"
version = "2.4.1"
description = "A python package for Lib3MF tools"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
